--- a/model.ipynb
+++ b/model.ipynb
@@ -66,7 +66,7 @@
    "id": "dcc0c5e7-297c-45ca-a2c8-1593868615e6",
    "metadata": {},
    "source": [
-    "## 3.2 Bestimmen Sie einen Algorithmus aus sklearn, der für Ihren Datensatz und Ihr Problem geeignet ist.\n",
+    "### 3.2 Bestimmen Sie einen Algorithmus aus sklearn, der für Ihren Datensatz und Ihr Problem geeignet ist.\n",
     "\n",
     "| Algorithmus                 | Beschreibung                                                                                                    |\n",
     "| --------------------------- | --------------------------------------------------------------------------------------------------------------- |\n",
@@ -185,7 +185,7 @@
    "id": "7c0d8c7b-5eb7-4182-8b1e-724cceb69f73",
    "metadata": {},
    "source": [
-    "## 3.3 Testen\n",
+    "### 3.3 Testen\n",
     "Ich nehme Manuell Test daten und vergleiche sie."
    ]
   },
